# SCONES

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: builds.yml  cmake.yml
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
runner/: CMakeLists.txt  NotAGame.cpp  NotAGame.hpp  main.cpp
runner/Paperbag/: GUI.cpp  GUI.hpp  NotAGame.hpp  Pixel.hpp  RandomCrap.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
runner/Paperbag/Renderer/Shader/: Shader.hpp  Uniform.hpp
src/: CMakeLists.txt  main.cpp
src/NES/: APU.hpp  Bus.cpp  Bus.hpp  CPU.cpp  CPU.hpp  Cartridge.cpp  Framebuffer.cpp  Framebuffer.h  Mapper.cpp  Mapper.hpp  Mapper0.cpp  Mapper0.hpp  NES.cpp  NES.h  NES.hpp  PPU.cpp  PPU.hpp
src/SCONES/: Bus.cpp  Bus.hpp  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Controller.hpp  Framebuffer.cpp  Framebuffer.hpp  Mapper.hpp  Mapper0.cpp  Mapper0.hpp  NES.cpp  NES.hpp  PPU.cpp  PPU.hpp
tests/: CMakeLists.txt  TestCPU.cpp  TestCartridge.cpp  main.cpp
